[metadata]
name = pythontemplate-BIZE
version = 0.0.1
author = Laurent BIZE
author_email = laurent.bize@gmail.com
description = A package template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lbize/PythonTemplate
project_urls =
    Bug Tracker = https://github.com/lbize/PythonTemplate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License v2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.2

[options.packages.find]
where = src